tests/type/bad/constructor_wrong_fields.hel
foreign io_unit: IO<()>;

type Shape =
    | Circle { radius: f64 }
    ;

s = Circle{ diameter: 1.0 };

main = io_unit;
